--- a/css/main.css
+++ b/css/main.css
@@ -157,7 +157,7 @@ nav ul li {
   height: 300px;
 }
 .easybus {
-  padding-left: 100px;
+  /* padding-left: 100px; */
   /* padding-top: 80px; */
 }
 
